--- a/Highwind/Highwind.vcxproj.filters
+++ b/Highwind/Highwind.vcxproj.filters
@@ -1,55 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="App">
-      <UniqueIdentifier>{fa73ddc0-5a3a-4315-aa77-71cecd5a1280}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Engine">
-      <UniqueIdentifier>{d393945e-abf2-4a45-be34-5fbb714bb88d}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Engine\Utility">
-      <UniqueIdentifier>{1877196b-eb99-4c0d-822f-b74727d2ab8c}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Engine\Shader">
-      <UniqueIdentifier>{ff600edb-dad6-4837-8a9a-443fddd6aabb}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Engine\Texture">
-      <UniqueIdentifier>{d05dfd07-dae0-4d30-b86e-297635019baa}</UniqueIdentifier>
-    </Filter>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>App</Filter>
-    </ClCompile>
     <ClCompile Include="..\libraries\glad\src\glad.c" />
+    <ClCompile Include="main.cpp">
+      <Filter>Engine\Core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="HighwindWindow.hpp">
-      <Filter>Engine</Filter>
+    <Filter Include="Engine">
+      <UniqueIdentifier>{21f2c020-e04b-4907-92b4-5d5b50d147e3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Core">
+      <UniqueIdentifier>{a41f4944-3cd5-448b-b446-b52b4ab9f278}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource Files">
+      <UniqueIdentifier>{fb669eaf-48a6-4227-ab62-cc1cd142a2ac}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="logger.hpp">
+      <Filter>Engine\Core</Filter>
     </ClInclude>
-    <ClInclude Include="libs.h">
-      <Filter>Engine</Filter>
+    <ClInclude Include="defines.h">
+      <Filter>Engine\Core</Filter>
     </ClInclude>
-    <ClInclude Include="GraphicsEngine.hpp">
-      <Filter>Engine</Filter>
-    </ClInclude>
-    <ClInclude Include="HWUtil.hpp">
-      <Filter>Engine\Utility</Filter>
-    </ClInclude>
-    <ClInclude Include="FragmentShader.hpp">
-      <Filter>Engine\Shader</Filter>
-    </ClInclude>
-    <ClInclude Include="VertexShader.hpp">
-      <Filter>Engine\Shader</Filter>
-    </ClInclude>
-    <ClInclude Include="Shader.hpp">
-      <Filter>Engine\Shader</Filter>
-    </ClInclude>
-    <ClInclude Include="stb_image.h">
-      <Filter>Engine\Texture</Filter>
-    </ClInclude>
-    <ClInclude Include="Camera.hpp">
-      <Filter>Engine</Filter>
-    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="vertex_core.glsl">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="fragment_core.glsl">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
