add light objects

--- a/Highwind/Highwind.vcxproj.filters
+++ b/Highwind/Highwind.vcxproj.filters
@@ -60,5 +60,8 @@
     <ClInclude Include="OBJLoader.hpp">
       <Filter>Engine\Core</Filter>
     </ClInclude>
+    <ClInclude Include="Light.h">
+      <Filter>Engine\Core</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
