--- a/Highwind/Highwind.vcxproj
+++ b/Highwind/Highwind.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="defines.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Light.h" />
     <ClInclude Include="logger.hpp" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="Mesh.h" />
