--- a/Highwind/Highwind.vcxproj
+++ b/Highwind/Highwind.vcxproj
@@ -118,7 +118,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)\libraries\SOIL2\include;$(SolutionDir)\libraries\glad\include;$(SolutionDir)\libraries\glew-2.2.0\include;$(SolutionDir)\libraries\glfw-3.3.8.bin.WIN64\include;$(SolutionDir)\libraries\glm-0.9.9.8\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\libraries\imgui;$(SolutionDir)\libraries\SOIL2\include;$(SolutionDir)\libraries\glad\include;$(SolutionDir)\libraries\glew-2.2.0\include;$(SolutionDir)\libraries\glfw-3.3.8.bin.WIN64\include;$(SolutionDir)\libraries\glm-0.9.9.8\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -136,7 +136,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)\libraries\SOIL2\include;$(SolutionDir)\libraries\glad\include;$(SolutionDir)\libraries\glew-2.2.0\include;$(SolutionDir)\libraries\glfw-3.3.8.bin.WIN64\include;$(SolutionDir)\libraries\glm-0.9.9.8\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\libraries\imgui;$(SolutionDir)\libraries\SOIL2\include;$(SolutionDir)\libraries\glad\include;$(SolutionDir)\libraries\glew-2.2.0\include;$(SolutionDir)\libraries\glfw-3.3.8.bin.WIN64\include;$(SolutionDir)\libraries\glm-0.9.9.8\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -150,10 +150,26 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\libraries\glad\src\glad.c" />
+    <ClCompile Include="..\libraries\imgui\imgui.cpp" />
+    <ClCompile Include="..\libraries\imgui\imgui_demo.cpp" />
+    <ClCompile Include="..\libraries\imgui\imgui_draw.cpp" />
+    <ClCompile Include="..\libraries\imgui\imgui_impl_glfw.cpp" />
+    <ClCompile Include="..\libraries\imgui\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="..\libraries\imgui\imgui_tables.cpp" />
+    <ClCompile Include="..\libraries\imgui\imgui_widgets.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\libraries\imgui\imconfig.h" />
+    <ClInclude Include="..\libraries\imgui\imgui.h" />
+    <ClInclude Include="..\libraries\imgui\imgui_impl_glfw.h" />
+    <ClInclude Include="..\libraries\imgui\imgui_impl_opengl3.h" />
+    <ClInclude Include="..\libraries\imgui\imgui_impl_opengl3_loader.h" />
+    <ClInclude Include="..\libraries\imgui\imgui_internal.h" />
+    <ClInclude Include="..\libraries\imgui\imstb_rectpack.h" />
+    <ClInclude Include="..\libraries\imgui\imstb_textedit.h" />
+    <ClInclude Include="..\libraries\imgui\imstb_truetype.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="defines.h" />
     <ClInclude Include="Game.h" />
