--- a/Highwind/imgui.ini
+++ b/Highwind/imgui.ini
@@ -11,6 +11,10 @@ Pos=129,137
 Size=260,252
 
 [Window][Local Camera Point Light #1]
-Pos=919,99
+Pos=49,176
 Size=228,185
+
+[Window][Engine Options]
+Pos=67,39
+Size=133,100
 
