--- a/Highwind/imgui.ini
+++ b/Highwind/imgui.ini
@@ -11,10 +11,18 @@ Pos=129,137
 Size=260,252
 
 [Window][Local Camera Point Light #1]
-Pos=50,189
-Size=300,340
+Pos=31,167
+Size=327,340
 
 [Window][Engine Options]
-Pos=52,25
+Pos=41,26
 Size=133,100
+
+[Window][Engine & Rendering Options]
+Pos=52,55
+Size=218,100
+
+[Window][Local PL]
+Pos=52,193
+Size=331,198
 
