--- a/Highwind/Highwind.vcxproj
+++ b/Highwind/Highwind.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="Component.h" />
     <ClInclude Include="defines.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="GlobalCache.h" />
     <ClInclude Include="Light.h" />
     <ClInclude Include="logger.hpp" />
     <ClInclude Include="Material.h" />
@@ -182,6 +183,7 @@
     <ClInclude Include="OBJLoader.hpp" />
     <ClInclude Include="Primitives.h" />
     <ClInclude Include="Shader.h" />
+    <ClInclude Include="ShadowMapFBO.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Vertex.h" />
   </ItemGroup>
