--- a/Highwind/imgui.ini
+++ b/Highwind/imgui.ini
@@ -19,10 +19,18 @@ Pos=41,26
 Size=133,100
 
 [Window][Engine & Rendering Options]
-Pos=52,55
-Size=218,100
+Pos=89,297
+Size=232,109
 
 [Window][Local PL]
-Pos=52,193
-Size=331,198
+Pos=30,182
+Size=331,202
+
+[Window][Point Lights]
+Pos=16,16
+Size=398,216
+
+[Window][Lights]
+Pos=87,61
+Size=261,215
 
